# Ultimate-Magic

./: .gitignore  CMakeLists.txt  README.md  Ultimate Magic.cbp  Ultimate Magic.depend  Ultimate Magic.layout  main.cpp
Editor/: Editor.cbp  Editor.depend  Editor.layout  main.cpp
Screens/: Collision finies !
develop/: a.out  test.txt  writter.cpp
game/: Ultimate Magic  Ultimate Magic.cbp  Ultimate Magic.depend  Ultimate Magic.layout  Ultimate Magic.layout.cbTemp  main.cpp
include/: Ablaze.h  Alive.h  Alive.hpp  Animation.h  AnimationEngine.h  AnimationEngine.hpp  Behavior.h  Behavior.hpp  Camera.h  Collisionnable.h  Collisionnable.hpp  Controller.h  Core.h  Core.hpp  Defines.h  Defines.h.cbTemp  Defines.hpp  Editor.h  Editor.hpp  Effect.h  Effect.hpp  EffectEngine.h  EffectEngine.hpp  EntityGraphic.h  EntityGraphic.hpp  Global.h  Graphics.h  Graphics.hpp  IddleBehavior.h  IddleBehavior.hpp  Identity.h  Identity.hpp  KeyboardController.h  KeyboardController.hpp  Loader.h  Loader.hpp  Movable.h  Movable.hpp  NPC.h  NPC.hpp  (+26 more)
src/: #World.cpp#  #WorldManager.cpp#  Ablaze.cpp  Alive.cpp  Animation.cpp  AnimationEngine.cpp  Behavior.cpp  Camera.cpp  Collisionnable.cpp  Controller.cpp  Core.cpp  Editor.cpp  Effect.cpp  EffectEngine.cpp  EntityGraphic.cpp  Global.cpp  Graphics.cpp  IddleBehavior.cpp  Identity.cpp  KeyboardController.cpp  Loader.cpp  Movable.cpp  NPC.cpp  Object.cpp  ObjectEngine.cpp  ParticlesPrinter.cpp  Perlin.cpp  Player.cpp  PlayerManager.cpp  Positionnable.cpp  TextureEngine.cpp  Tile.cpp  Tile.cpp.cbTemp  TileEngine.cpp  VObject.cpp  Villager.cpp  (+2 more)
(+50 files in other folders)
